--- a/scripts/DataReformat.ipynb
+++ b/scripts/DataReformat.ipynb
@@ -25,21 +25,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "task_list = [ \"1_digit_subtraction\", \"2_digit_multiplication\", \"3_digit_division\", \"4_digit_addition\", \"4_digit_subtraction\", \"5_digit_multiplication\", \"1_digit_division\", \"2_digit_addition\",\n",
-    "         \"2_digit_subtraction\", \"3_digit_multiplication\", \"4_digit_division\", \"5_digit_addition\", \"5_digit_subtraction\", \"1_digit_multiplication\", \"2_digit_division\", \"3_digit_addition\", \"3_digit_subtraction\",\n",
-    "         \"4_digit_multiplication\", \"5_digit_division\"]\n",
-    " \n",
-    "#\"1_digit_addition\","
+    "!pip install num2words\n",
+    "!pip install jsonlines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "task_list = [ \"1_digit_addition\", \"1_digit_subtraction\", \"2_digit_multiplication\", \"3_digit_division\", \"4_digit_addition\", \"4_digit_subtraction\", \"5_digit_multiplication\", \"1_digit_division\", \"2_digit_addition\",\n",
+    "         \"2_digit_subtraction\", \"3_digit_multiplication\", \"4_digit_division\", \"5_digit_addition\", \"5_digit_subtraction\", \"1_digit_multiplication\", \"2_digit_division\", \"3_digit_addition\", \"3_digit_subtraction\",\n",
+    "         \"4_digit_multiplication\", \"5_digit_division\"]\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
